--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -171,11 +171,18 @@ es:
       store:
         one: "Tienda"
         other: "Tiendas"
+      book:
+        one: 'Libro'
+        other: 'Libros'
     attributes:
       store:
         codename: "Nombre Clave"
         address: "Dirección"
         phone: "Teléfono"
+      book:
+        title: 'Título'
+        author: 'Autor (es)'
+        year: 'Año'
     errors:
       messages:
         record_invalid: 'La validación falló: %{errors}'
@@ -183,6 +190,15 @@ es:
           has_one: 'No se puede eliminar el registro porque existe un %{record} dependiente.'
           has_many: 'No se puede eliminar el registro porque existen %{record} dependientes.'
       models:
+        book:
+          attributes:
+            title:
+              blank: "Título no puede estar vacío."
+              too_short: "Título demasiado corto (5 caracteres mínimo)."
+            author:
+              too_short: "Autor (es) demasiado corto (5 caracteres mínimo)."
+            year:
+              blank: "Año de publicación no puede estar vacío."
         store:
           attributes:
             codename:
