--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -174,6 +174,9 @@ es:
       book:
         one: 'Libro'
         other: 'Libros'
+      assign_book:
+        one: 'Asignar Libro'
+        other: 'Asignar Libros'
     attributes:
       store:
         codename: "Nombre Clave"
@@ -183,6 +186,10 @@ es:
         title: 'Título'
         author: 'Autor (es)'
         year: 'Año'
+      assign_book:
+        book_id: 'Libro'
+        store_id: 'Tienda'
+        quantity: 'Cantidad'
     errors:
       messages:
         record_invalid: 'La validación falló: %{errors}'
