--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -197,6 +197,14 @@ es:
           has_one: 'No se puede eliminar el registro porque existe un %{record} dependiente.'
           has_many: 'No se puede eliminar el registro porque existen %{record} dependientes.'
       models:
+        asign_book:
+          attributes:
+            book:
+              required: 'Libro no puede estar vacío.'
+            store:
+              required: 'Tienda no puede estar vacío.'
+            quantity:
+              blank: 'Cantidad no puede estar vacío.'
         book:
           attributes:
             title:
